--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,7 @@
 <p>Meie poes on müügil [[${kogus}]] toodet.</p>
 <a href="Tooted">Näita tooteid</a>
 <a href="/form">Lisa tooteid juurde</a>
+<a href="/kontaktid">Vaata kus asume</a>
 
 <p id="komm" style="display:none">Tüng!</p>
 
