Võrguühenduseta kasutamise realiseerimine. Teoorias peaks toimima.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" manifest="/manifest.appcache">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>Koduleht</title>
+    <link rel="stylesheet" type = "text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!--link href="../static/css/Disain.css" rel="stylesheet" type="text/css"-->
 </head>
 <body>
-<h1>Tere tulemast e-poodi!</h1>
+<div class="container">
 
-<p>Meie poes on müügil [[${kogus}]] toodet.</p>
-<a href="Tooted">Näita tooteid</a>
-<a href="/form">Lisa tooteid juurde</a>
-<a href="/kontakt">Vaata kus asume</a>
+    <div class="page-header">
+        <h1 align="center">Tere tulemast e-poodi!</h1>
+    </div>
+    <div class="jumbotron">
+        <p><h2 align="center">Meie poes on müügil [[${kogus}]] toodet!</h2></p>
+    </div>
 
-<p id="komm" style="display:none">Tüng!</p>
+</div>
 
-<button type="button" onclick="document.getElementById('komm').style.display='block'">Vajuta siia, saad kommi!</button>
+<ul>
+    <li><a href="Tooted">Näita tooteid</a></li>
+    <li><a href="/form">Lisa tooteid juurde</a></li>
+    <li><a href="/kontakt">Vaata kus asume</a></li>
+
+    <p id="komm" style="display:none">Tüng!</p>
+
+    <button type="button" onclick="document.getElementById('komm').style.display='block'">Vajuta siia, saad kommi!</button>
+</ul>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </body>
 </html>
