--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
     <title>Koduleht</title>
     <script type="text/javascript">
         function contact(){
-            history.pushState({}, "", kontakt);
+            history.pushState({}, "", "kontakt");
             document.getElementById("contact").innerHTML = "Kirjutage meie meiliaadressile!"
         }
     </script>
