--- a/src/main/resources/templates/kontakt.html
+++ b/src/main/resources/templates/kontakt.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Kontakt</title>
     <style>
         #map {
             height: 400px;
